splash screen animation added

--- a/app.json
+++ b/app.json
@@ -4,11 +4,11 @@
     "slug": "guess-game",
     "version": "1.0.0",
     "orientation": "portrait",
-    "icon": "./assets/icon.png",
+    "icon": "./assets/guess-game.png",
     "splash": {
-      "image": "./assets/splash.png",
+      "image": "./assets/guess-game.png",
       "resizeMode": "contain",
-      "backgroundColor": "#ffffff"
+      "backgroundColor": "#000000"
     },
     "updates": {
       "fallbackToCacheTimeout": 0
